# pwntools

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .readthedocs.yaml  .sublime-settings  .travis.yml  .travis_install.sh  .travis_ssh_setup.sh  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  LICENSE  LICENSE-binjitsu.txt  LICENSE-pwntools.txt  LICENSE.txt  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README  README.md  SECURITY.md  TESTING.md  gdb_doctest1.py  hello.c  install.sh  install_local.sh  install_win.ps1  libc.so.6  mips_mov_test.py  preinstall_win.bat  preinstall_win.ps1  pyproject.toml  requirements.txt  setup.py  shippable.yml  template.mako  test-libc-impl.py  test-tubes-encoding.py  test.py  (+2 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: android.yml  changelog.yml  ci.yml  docker.yml  dockerhub.yml  lint.yml  merge-conflict.yml  pylint.yml  ubuntu-bionic-ci.yml  windows.yml
ROPinHood/: readme
ROPinHood/lib/: gadgets.py
ROPinHood/src/: ROPinHood.py
aeROPics/: aeROPics.py  aeROPics2.py  readme
aeROPics/lib/: gadgets.py  readelf.py
asm/: asm  disasm
binjitsu/: toplevel.py
binutils/: alpha-as  alpha-objcopy  alpha-objdump  arm-objcopy  arm-objdump  build.sh  cris-as  cris-objcopy  cris-objdump  ia64-as  ia64-objcopy  ia64-objdump  m68k-objcopy  m68k-objdump  mips-as  mips-objcopy  mips-objdump  powerpc-as  powerpc-objcopy  powerpc-objdump  promisc-objdump  vax-as  vax-objcopy  vax-objdump
bytes/: Makefile  README.md
bytes/mylib/: MyLib.mlb  (+1 more)
cgioverflow/: README  captcha-do.sh  exploit.py  kielbasa.py
clookup/: clookup
cloud/: README  client.py  client.py~  registry_server.py  server.py  server.py~
crop/: Makefile  README.md
cyclic/: cyclic
data/: crcsums.txt
demo/: Makefile  demo.c  demo32  demo64
dictgen/: dictgen
docs/: .gitignore  Makefile  dashbuild.py  requirements.txt
easy/: ldpreload  ldpreload.c  ldpreloadsolution.c  pass  pass.c  path  path.c
elf-loader/: defines.asm  elf-loader.asm  print_sizes.py
elfpatch/: elfdump  elfpatch
examples/: README  README.md  adb-compile.c  android.py  args.py  argstest.py  asm.py  asmtest.py  attach.py  clean_and_log.py  completertest.py  contexttest.py  encoder.py  gdb_api.py  gen-README.py  indented.py  indenttest.py  inputtest.py  iotest.py  keymaptest.py  listen_test.py  listen_uroboros.py  logtest.py  memleaktest.py  options.py  port_forward.py  ptytest.py  readline_completers.py  readlineexc.py  remote.py  remote_gdb_debugging.py  sigreturn_corefile_aarch64.py  sigreturn_corefile_amd64.py  sigreturn_corefile_arm.py  sigreturn_corefile_i386.py  spinners.py  splash.py  ssh.py  termtest.py  text.py  (+1 more)
fmtstring/: fmtstring.py
gadgets/: Main.hs  Makefile
gitcarve/: README.org  gitcarve
harden/: README
hex/: hex  unhex
ipbrute/: README  better.c  ipbrute  ipbrute.c
ipof/: ipof
ld-wrapper/: .gitignore  Makefile  ld-override.32.asm  ld-override.64.asm  ld-override.h  printf.c
ld-wrapper2/: Makefile  ld-helper.c  ld-override.32.asm  ld-override.h  test.32.asm  thread-stack.c
lib/: pwn  pwn2
mags/: Makefile  mags  mags.c
nops/: nops
packer/: packit
pbpoke/: pbpeek.py  pbpoke.py
permapwn/: README
pil/: getdata.py  setdata.py
pltfixup/: pltfixup
pltlist/: pltlist
poke/: peek  poke
pwn/: README  __init__.py  aeROPics.py  asm.py  avoid.py  basechatter.py  basesock.py  binutils.py  blocks.py  ciic.py  classic.py  clookup.py  consts.py  context.py  crypto.py  cyclic.py  de_bruijn.py  debugging.py  decoutil.py  decoutils.py  demo.py  dynelf.py  elf.py  fmtstring.py  fucking.py  garbage.py  gas.py  genutil.py  handler.py  hashes.py  iterutil.py  leak.py  listutil.py  log.py  memleak.py  memoize.py  nasm.py  noargv.py  polynom.py  process.py  (+21 more)
pwn2/: __init__.py
pwnlib/: FilePointer.py  __init__.py  abi.py  adb.py  args.py  ascii_shellcode.py  asm.py  atexception.py  atexit.py  basechatter.py  cache.py  config.py  context.py  device.py  dynelf.py  elf.py  exception.py  filepointer.py  fmtstr.py  formatstring.py  gdb.py  gdb_api_bridge.py  gdb_faketerminal.py  io.py  lexer.py  libcdb.py  log.py  log_levels.py  memleak.py  pep237.py  pow.py  py2compat.py  qemu.py  r2.py  regsort.py  remote.py  replacements.py  ret2dlresolve.py  rop.py  runner.py  (+10 more)
pwntools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rainbow/: exampleusage.py  rainbow.py
randomua/: randomua
retguard/: bootstrapper.asm  retguard
rop/: lib  rop.py  rop.py~
scramble/: scramble
shellcraft/: README  _shellcraft_list.py  core.py  shellcraft
shoehorn/: bootstrapper.asm  loader.asm  payload.asm  shoehorn
sploitmeister/: TODO  api.py  daemon.py  sploitmeister.py  sploitmeister_sql  test.py
sql-bin-get/: README  getbycondval.py  getorderbyval.py
timeattack/: main.py
travis/: coverage_chdir.py  install.sh  libcdb_nginx_cache.conf  pep8.conf  setup_avd.sh  setup_avd_fast.sh  ssh_setup.sh  update_demo.sh
unbytes/: notes.org
unhex/: unhex
unpacker/: dependencies  unpacker.pl
up/: README.markdown  unpacker.rb
visualization/: binvis.py  hilbert.py  hilbert_api.py  visualedit.py  visualise.py
wrap/: README  wrap32  wrap64
zsh-completions/: _asm  _cyclic  _disasm  _elfpatch  _nops  _pbpeek  _pbpoke  _peek  _poke  _scramble  _shellcraft  install.zsh
(+3974 files in other folders)
