[build-system]
requires = ["setuptools>=44.0", "wheel", "toml; python_version<'3.4'"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "scripts"]

name = "pwntools"
description = "Pwntools CTF framework and exploit development library."
license = {text = "Mostly MIT, some GPL/BSD, see LICENSE-pwntools.txt"}
readme = "README.md"
authors = [{name = "Gallopsled et al.", email = "pwntools-users@googlegroups.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
keywords = ["pwntools", "exploit", "ctf", "capture", "the", "flag", "binary", "wargame", "overflow", "stack", "heap", "defcon"]

requires-python = ">=2.7"
dependencies = [
    "mako>=1.0.0",
    "pyelftools>=0.2.4",
    "ropgadget>=5.3",
    "pip>=6.0.8",
    "pygments>=2.0",
    "python-dateutil",
    "packaging",
    "psutil>=3.3.0",
    "intervaltree>=3.0",
    "sortedcontainers",
    "six>=1.12.0",
    "pathlib2; python_version < '3.4'",
    "unix-ar; python_version >= '3'",
    "zstandard",
]

[project.optional-dependencies]
full = [
    "capstone>=3.0.5rc2",  # see Gallopsled/pwntools#971, Gallopsled/pwntools#1160
    "colored_traceback",
    "paramiko>=1.15.2",
    "pyserial>=2.7",
    "pysocks",
    "requests>=2.0",
    "rpyc",
    "unicorn>=1.0.2rc1",  # see unicorn-engine/unicorn#1100 and #1170
]

[project.urls]
homepage = "https://pwntools.com"
download = "https://github.com/Gallopsled/pwntools/releases"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/constants/*",
]
source = [
    "pwn",
    "pwnlib",
    "~/.cache/.pwntools-cache-2.7/",
    "~/.cache/.pwntools-cache-3.10/",
]
disable_warnings = ["module-not-imported"]
